--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <meta name="google" content="notranslate">
   <meta property='og:title' content='Vbersenev - professional React developer.' />
   <meta property='og:site_name' content='Vbersenev'/>
   <meta property='og:image:alt' content='Hello world! This is my person website, here u can find a little bit more information about me. ;)' />
@@ -16,7 +17,7 @@
   <meta name='theme-color' content='#111'>
   <title>BERSENEV VLADISLAV</title>
 </head>
-<body>
+<body class="notranslate">
 <div id='root'></div>
 <div id='cursor'></div>
 <div id='modals'></div>
