--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name='theme-color' content='#111'>
   <title>BERSENEV VLADISLAV</title>
 </head>
-<body class="notranslate">
+<body>
 <div id='root'></div>
 <div id='cursor'></div>
 <div id='modals'></div>
