--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         content='Hello there! This is my person website, here u can find a little bit more information about me. ;)'>
   <meta name='theme-color' content='#111'>
   <title>BERSENEV VLADISLAV</title>
+  <meta name="lava" content="v0AjBJ7y8NDQM915merZuFEcqHn3LXtPSpxlkUb2wO4RaVsK"/>
 </head>
 <body>
 <div id='root'></div>
