--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta name="google" content="notranslate">
-  <meta property='og:title' content='Vbersenev - professional React developer.' />
+  <meta property='og:title' content='Vbersenev - professional Web developer.' />
   <meta property='og:site_name' content='Vbersenev'/>
   <meta property='og:image:alt' content='Hello world! This is my person website, here u can find a little bit more information about me. ;)' />
   <meta property='og:type' content='website' />
   <meta property='og:url' content='https://Vbersenev72.github.io' />
   <meta property='og:description'
         content='Hello world! This is my person website, here u can find a little bit more information about me. ;)' />
-  <meta name='title' content='Vbersenev - professional React developer.'>
+  <meta name='title' content='Vbersenev - professional Web developer.'>
   <meta name='description'
         content='Hello there! This is my person website, here u can find a little bit more information about me. ;)'>
   <meta name='theme-color' content='#111'>
